No-Chromium/error.log
    Checking noir-browser v0.1.0 (C:\Users\andre\OneDrive\Documentos\Navegador Propio Personal\No-Chromium)
error[E0433]: failed to resolve: could not find `css_engine` in `generated_rust`
   --> src\vulkan_engine\real_renderer.rs:192:86
    |
192 |     pub fn draw_frame(&mut self, ctx: &VulkanContext, style: &crate::generated_rust::css_engine::ComputedStyle) {
    |                                                                                      ^^^^^^^^^^ could not find `css_engine` in `generated_rust`
    |
help: consider importing this module
    |
  1 + use crate::parsers::css_engine;
    |
help: if you import `css_engine`, refer to it directly
    |
192 -     pub fn draw_frame(&mut self, ctx: &VulkanContext, style: &crate::generated_rust::css_engine::ComputedStyle) {
192 +     pub fn draw_frame(&mut self, ctx: &VulkanContext, style: &css_engine::ComputedStyle) {
    |

error[E0433]: failed to resolve: unresolved import
  --> src\main.rs:63:28
   |
63 |     let text_data = crate::text_rasterizer::RasterizedText::new(&extracted_text, 90.0);
   |                            ^^^^^^^^^^^^^^^ unresolved import
   |
help: a similar path exists
   |
63 |     let text_data = crate::layout::text_rasterizer::RasterizedText::new(&extracted_text, 90.0);
   |                            ++++++++
help: consider importing this struct through its public re-export
   |
 7 + use crate::RasterizedText;
   |
help: if you import `RasterizedText`, refer to it directly
   |
63 -     let text_data = crate::text_rasterizer::RasterizedText::new(&extracted_text, 90.0);
63 +     let text_data = RasterizedText::new(&extracted_text, 90.0);
   |

error[E0433]: failed to resolve: could not find `ui_gen` in `vulkan_engine`
   --> src\main.rs:107:54
    |
107 |                 let hitboxes = crate::vulkan_engine::ui_gen::get_ui_hitboxes(win_size.width as f32, win_size.height as f32);
    |                                                      ^^^^^^ could not find `ui_gen` in `vulkan_engine`
    |
help: consider importing this module
    |
  7 + use crate::ui::ui_gen;
    |
help: if you import `ui_gen`, refer to it directly
    |
107 -                 let hitboxes = crate::vulkan_engine::ui_gen::get_ui_hitboxes(win_size.width as f32, win_size.height as f32);
107 +                 let hitboxes = ui_gen::get_ui_hitboxes(win_size.width as f32, win_size.height as f32);
    |

error[E0433]: failed to resolve: could not find `ui_gen` in `vulkan_engine`
   --> src\main.rs:115:54
    |
115 | ...                   crate::vulkan_engine::ui_gen::UIButton::Close => {
    |                                             ^^^^^^ could not find `ui_gen` in `vulkan_engine`
    |
help: consider importing this enum
    |
  7 + use crate::ui::ui_gen::UIButton;
    |
help: if you import `UIButton`, refer to it directly
    |
115 -                                crate::vulkan_engine::ui_gen::UIButton::Close => {
115 +                                UIButton::Close => {
    |

error[E0433]: failed to resolve: could not find `ui_gen` in `vulkan_engine`
   --> src\main.rs:120:54
    |
120 | ...                   crate::vulkan_engine::ui_gen::UIButton::Minimize => {
    |                                             ^^^^^^ could not find `ui_gen` in `vulkan_engine`
    |
help: consider importing this enum
    |
  7 + use crate::ui::ui_gen::UIButton;
    |
help: if you import `UIButton`, refer to it directly
    |
120 -                                crate::vulkan_engine::ui_gen::UIButton::Minimize => {
120 +                                UIButton::Minimize => {
    |

error[E0433]: failed to resolve: could not find `ui_gen` in `vulkan_engine`
   --> src\main.rs:123:54
    |
123 | ...                   crate::vulkan_engine::ui_gen::UIButton::Maximize => {
    |                                             ^^^^^^ could not find `ui_gen` in `vulkan_engine`
    |
help: consider importing this enum
    |
  7 + use crate::ui::ui_gen::UIButton;
    |
help: if you import `UIButton`, refer to it directly
    |
123 -                                crate::vulkan_engine::ui_gen::UIButton::Maximize => {
123 +                                UIButton::Maximize => {
    |

warning: type `V8_NODISCARD` should have an upper camel case name
    --> src\generated_rust\v8_core.rs:1231:12
     |
1231 | pub struct V8_NODISCARD {
     |            ^^^^^^^^^^^^ help: convert the identifier to upper camel case: `V8Nodiscard`
     |
     = note: `#[warn(non_camel_case_types)]` (part of `#[warn(nonstandard_style)]`) on by default

warning: unused import: `ash::vk`
 --> src\generated_rust\vulkan_painter.rs:2:5
  |
2 | use ash::vk;
  |     ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `crate::parsers::dom_native`
 --> src\generated_rust\vulkan_painter.rs:3:5
  |
3 | use crate::parsers::dom_native;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Instance`
 --> src\generated_rust\vulkan_hardware.rs:2:23
  |
2 | use ash::{vk, Device, Instance};
  |                       ^^^^^^^^

warning: unused import: `std::ffi::c_void`
 --> src\vulkan_engine\real_renderer.rs:2:5
  |
2 | use std::ffi::c_void;
  |     ^^^^^^^^^^^^^^^^

warning: unused imports: `HTMLElement` and `HtmlTag`
  --> src\main.rs:19:30
   |
19 | use parsers::html_elements::{HTMLElement, HtmlTag};
   |                              ^^^^^^^^^^^  ^^^^^^^

warning: unused import: `layout::text_rasterizer::RasterizedText`
  --> src\main.rs:20:5
   |
20 | use layout::text_rasterizer::RasterizedText;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `entry`
  --> src\generated_rust\vulkan_context.rs:15:13
   |
15 |         let entry = unsafe { Entry::load().expect("Failed to load Vulkan") };
   |             ^^^^^ help: if this is intentional, prefix it with an underscore: `_entry`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `create_info`
  --> src\generated_rust\vulkan_context.rs:22:13
   |
22 |         let create_info = vk::InstanceCreateInfo::builder()
   |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_create_info`

warning: unnecessary `unsafe` block
  --> src\generated_rust\vulkan_context.rs:30:9
   |
30 |         unsafe {
   |         ^^^^^^ unnecessary `unsafe` block
   |
   = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\vulkan_engine\setup.rs:185:17
    |
185 |             let mut surface_resolution = match surface_capabilities.current_extent.width {
    |                 ----^^^^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\vulkan_engine\real_renderer.rs:339:17
    |
339 |             let mut alloc = self.memory_manager.allocator.lock().unwrap();
    |                 ----^^^^^
    |                 |
    |                 help: remove this `mut`

warning: unused variable: `extent`
  --> src\vulkan_engine\pipeline_gen.rs:16:9
   |
16 |         extent: vk::Extent2D,
   |         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_extent`

warning: variable does not need to be mutable
   --> src\parsers\html_lexer.rs:153:13
    |
153 |         let mut ch = *self.input.peek().unwrap();
    |             ----^^
    |             |
    |             help: remove this `mut`

For more information about this error, try `rustc --explain E0433`.
warning: `noir-browser` (bin "noir-browser") generated 14 warnings
error: could not compile `noir-browser` (bin "noir-browser") due to 6 previous errors; 14 warnings emitted
